# Portfolio

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IDEAS.md  README.md  create_tables.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  seed_data.py  tailwind.config.js
src/app/: main.py
src/app/core/: config.py
src/app/db/: base_class.py  session.py
src/app/models/: project.py
src/app/repositories/: project_repository.py
src/app/schemas/: project_schema.py
src/app/static/css/: input.css
src/app/templates/: base.html  index.html
src/app/templates/admin/: index.html
src/app/templates/partials/: project_card.html
tests/: conftest.py  test_main.py
