[project]
name = "portfolio"
version = "0.1.0"
description = "My personal portfolio website."
authors = [{ name = "Sergey Kislyakov", email = "s.kislyakov84@gmail.com" }] # <- ЗАМЕНИ НА СВОИ ДАННЫЕ
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]", # [standard] добавляет стандартные зависимости uvicorn
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-asyncio", # для поддержки async/await в тестах
    "httpx",          # для отправки HTTP-запросов в наше приложение в тестах
]

[tool.ruff]
# Указываем, где искать исходный код
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4"]

[tool.ruff.format]
quote-style = "double"