[project]
name = "portfolio"
version = "0.1.0"
description = "My personal portfolio website."
authors = [{ name = "Sergey Kislyakov", email = "s.kislyakov84@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "pydantic-settings",

    "sqlalchemy",
    "asyncpg",
    "psycopg[binary]", # Добавляем psycopg на всякий случай, [binary] - для легкой установки
    "aiosqlite",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.ruff]
# Указываем, где искать исходный код
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"